# claim-processing-multiagent

./: AGENTS.md  Makefile  README.md  handover.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/services/: scenario_generator.py  single_agent.py
backend/app/workflow/: client.py  policy_search.py  registry.py  supervisor.py  tools.py
backend/app/workflow/agents/: claim_assessor.py  communication_agent.py  policy_checker.py  risk_analyst.py  synthesizer.py
backend/tests/: test_policy_search.py  test_scenario_generator.py  test_workflow_client.py  test_workflow_tools.py
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/components/ui/: chart.tsx
infra/: main.bicep  main.json  main.parameters.json
infra/modules/: cognitive-services.bicep  postgres-flexible-server.bicep
specs/001-migrate-ms-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-structured-agent-outputs/: quickstart.md  research.md
specs/004-ai-demo-examples/: plan.md  quickstart.md  research.md  spec.md
specs/005-claims-workbench/: quickstart.md
